--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "counter-js"]
-	path = counter-js
+	path = assets/pages/counter-js
 	url = https://github.com/TheBigDiamond/counter-js.git
